--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="clock" >
+        <!-- <p id = "date"> rt4aerrt5yh</p> -->
+    <!-- <p id = "time">${time.toLocaleTimeString()}</p> -->
+      
+    </div>
+<script src="script.js"></script>
 </body>
 </html>
